--- a/labs/Lab_02_Browsers_DevTools/Solution/отчёт по лабораторной работе №2.md
+++ b/labs/Lab_02_Browsers_DevTools/Solution/отчёт по лабораторной работе №2.md
@@ -1,6 +1,6 @@
 Отчёт к лабораторной работе №2 "Инструменты разработчика в браузере"
 
-Задание №1. Исследование заголовков и тела обычных запросов и их ответов.
+### Задание №1. Исследование заголовков и тела обычных запросов и их ответов.
 
 * `Request URL` - это полный URL, который говорит серверу, какую страницу запрашивает пользователь.
 * `Request Method` - чаще всего это либо GET, либо POST. Обычно GET-запрос используется для получения данных (например при отображении веб-страницы), а POST — при отправке формы или данных (например, при авторизации или отправке почты).
@@ -22,13 +22,13 @@
     - Опциональное тело сообщения, которое содержит данные, связанные с запросом, либо документ (например HTML-страницу), передаваемый в  ответе.
 
 
-Задание №2. Исследование указывающих ответов сервера.
+### Задание №2. Исследование указывающих ответов сервера.
 
 При переходе на вкладку `http://rgups.ru/` мой адресс изменился на `https://rgups.ru`. Это означает, что передаваемые данные идут по защищённому протоколу.
 Заголовки, изменившиеся при переходе с http на https: Первоначальный Status Code: 301 Moved Permanently, при переходе Status Code: 200 OK.
 Изменился порт в заголовке Remote Address, c 80 на 443.
 
-Задание №3. Исследование получения и передачи cookie.
+### Задание №3. Исследование получения и передачи cookie.
 
 Заголовок `Set-Cookie` HTTP-ответа используется для отправки куки с сервера в клиентское приложение (браузер). Простой куки может задаваться так:  
 ```
@@ -55,7 +55,7 @@ Set-Cookie: tasty_cookie=strawberry
 
 Я понимаю cookie, как текстовый файл, хранящий данные о пользователе с помощбю токенов. Нарпимер, cookie сохраняет логины, пароли для автоматической авторизации на сайт или показывает товары в market place или рекламу на различных сайтах на основе предыдущих запросов и предпочтений. А ещё для отслеживания вашего местоположения(привет из военкомата)
 
-Задание №4. Исследование построения документов и сопутствующих запросов.
+### Задание №4. Исследование построения документов и сопутствующих запросов.
 
 `DOM` - «объектная модель документа» — это независящий от платформы и языка программный интерфейс, позволяющий программам и скриптам получить доступ к содержимому HTML -, XHTML - и XML -документов, а также изменять содержимое, структуру и оформление таких документов.(А своими словами общепринятая модель документа, дающая возможност к содержимому файлов)
 
@@ -63,7 +63,7 @@ Set-Cookie: tasty_cookie=strawberry
 
 Если вы сделали всего один запрос, то в списке огромное количество запросов и ответов. Сеть подгружает всё по частям. Различные картинки формата `.png`, скрипты `.script`, шрифты `font` и базы данных `.xml`. Браузер подгружает эти файлы для получения информации из сети.
 
-Задание №5. Определение параметров запроса.
+### Задание №5. Определение параметров запроса.
 
 Чтобы получить желаемый резульат я выполнил `get-запрос`   
 `https://www.rgups.ru/ajax/schedule.php?action=timetable&fac-id=1&course-id=3&group-id=26335&edu-type=internal`
